assets/css/style.css
/* ... */
.cart-products-container .img-container {
  width: 300px;
  height: 300px;
  overflow: hidden;
  border-right: var(--general-border);
}

.cart-products-container img {
  width: 100%;
  height: 100%;
  vertical-align: bottom;
}

.cart-products-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.cart-products-container .cart-desc {
  height: 150px;
  width: 70%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 100px 0 0;
  position: relative;
}

.cart-products-container .pro-name span {
  color: #4b4b4b;
  margin: 10px 0;
  font-weight: 300;
}

.cart-products-container .pro-name h4 {
  margin: 15px 0;
  font-size: 1rem;
}

.cart-products-container .pro-minus,
.pro-plus {
  border: solid 1px black;
  display: inline-block;
  padding: 0 4.5px;
  font-size: 1.2rem;
  font-weight: 700;
  cursor: pointer;
  transition: all 0.1s ease-in;
}

.cart-products-container .pro-count {
  display: inline-block;
  font-size: 1.1rem;
  font-weight: 700;
  width: 30px;

  text-align: center;
}

.cart-products-container .pro-price h5 {
  margin-top: 80px;
  width: 110px;
}

.cart-products-container .pro-price a:hover {
  color: black;
}

.cart-desc .remove-pro {
  position: absolute;
  height: 25px;
  width: 25px;
  display: block;
  border: solid 1px black;
  text-align: center;
  line-height: 25px;
  top: 20px;
  right: -5px;
  transition: all 0.1s ease-in;
  cursor: pointer;
  background-color: white;
  color: black;
  font-size: 1rem;
  font-weight: 600;
}

.cart-desc .remove-pro:hover {
  background-color: black;
  color: white;
}

.cart-section .checkout {
  height: 120px;
  padding: 20px 30px;
  margin: auto;
  width: 90%;
}

.cart-section .checkout .cart-subtotal {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.2rem;
}
.checkout .cart-subtotal h5 {
  font-size: 1.2rem;
}

.checkout input {
  display: block;
  margin: 20px auto;
  width: 100%;
  height: 40px;
  border: solid 1px black;
  background-color: white;
  font-size: 1.1rem;
  font-weight: 600;
  transition: all 0.1s ease-in;
  color: black;
  border-radius: 0;
  -webkit-appearance: none;
}

.checkout input:hover {
  background-color: black;
  color: white;
}
.cart-btn-phone {
  display: none;
}

/*--------  Tablet styling -------*/
@media (max-width: 1000px) {
  .cart-products-container .pro-name h4 {
    margin: 10px 0;
    font-size: 1rem;
  }
  .cart-products-container .cart-desc {
    height: 150px;
    width: 70%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0px 50px 0 30px;
    position: relative;
  }

  .cart-products-container .img-container {
    width: 45%;
    height: 280px;
    overflow: hidden;
    border-right: var(--general-border);
  }

  .cart-products-container img {
    width: 100%;
    vertical-align: bottom;
  }
}
/* ----- Mobile phone styling ---- */
@media (max-width: 799px) {
  .cart-products-container .img-container {
    width: 170px;
    height: 170px;
    overflow: hidden;
    border-right: var(--general-border);
  }

  .cart-header button {
    margin-right: 10px;
  }

  .cart-products-container img {
    width: 100%;
    height: 100%;
    vertical-align: bottom;
  }

  .cart-products-container .cart-desc {
    display: block;
    width: 55%;
    margin: 7px;
  }

  .cart-products-container .pro-name h4 {
    margin: 5px 0;
    font-size: 1rem;
  }

  .cart-products-container .pro-price h5 {
    margin-top: 5px;
    width: unset;
  }

  .cart-desc .remove-pro {
    top: unset;
    /* bottom: 7px; */
    right: 5px;
  }

  .cart-header a {
    width: 90px;
  }

  #header {
    padding: 0 20px;
    position: sticky;
  }

  #navbar {
    display: block;
    width: 100%;
    height: 140px;
    background-color: rgba(255, 255, 255);
  }

  #navbar li a {
    display: block;
    padding: 10px 20px;
    font-size: 22px;
    font-weight: 200;
  }
  #navbar li {
    border-bottom: var(--general-border);
  }

  .header-logo {
    width: 30%;
    text-align: center;

    height: 20px;
  }

  .cart-btn-phone {
    display: block;
    color: black;
    text-decoration: none;
    width: 30%;
    font-size: 1.2rem;
    text-align: end;
    height: 20px;
  }

  .header-left {
    width: 100%;
    position: absolute;
    top: 68px;
    right: 0px;
    left: 0px;
    border-top: var(--general-border);
    display: none;
  }

  .header-right {
    width: 100%;
    position: absolute;
    top: 208px;
    right: 0px;
    left: 0px;
    border-top: var(--general-border);
    display: none;
  }

  .logo {
    width: 75px;
  }

  .header-hamburger {
    display: inline-block;
    width: 30%;
    text-align: left;
    height: 20px;
    cursor: pointer;
    z-index: 99999;
    background-color: white;
    border: none;
  }
  .header-hamburger i {
    text-decoration: none;
    color: black;
    font-size: 22px;
  }
  .cart-sidebar {
    width: 100%;
    border-left: unset;
  }

  .cart-section h3 {
    padding: 20px 20px;
  }
  .cart-products-container .desc {
    width: 50%;
    height: 100px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
  }

  .cart-product .pro-name {
    margin-top: 20px;
  }
}

/* ---------------------------- Product Page ---------------------------- */
.single-product {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.single-product .img-container {
  width: 50%;
  /* height: 600px; */
  border-right: var(--general-border);
  overflow: hidden;
}

.single-product .img-container img {
  width: 100%;
  vertical-align: bottom;
}

.single-product .desc {
  padding: 0 30px;
  width: 80%;
}
.single-product .desc h4 {
  font-size: 1.6rem;
  margin-bottom: 20px;
}
.single-product .desc .star {
  margin-bottom: 20px;
}

.single-product .desc-price h5 {
  margin-bottom: 30px;
  font-size: 1.3rem;
}
/* ... */

